Bug 605023 - Prevent nsChromeRegistry::ReloadChrome() from hiding top level widgets on windows. r=bz, a=betaN